# iot-dashboard

./: .gitignore  Dockerfile  README.md  app.py  application.yml  pyproject.toml
dashboard/: config.py  factory.py  http_client.py  mock.py  mock_data.py  mongo_analytics.py
dashboard/core/: __init__.py  client.py  repository.py  types.py
dashboard/mongo/: __init__.py  alerts.py  analytics.py  base.py
dashboard/services/: __init__.py  alerts_service.py  analytics_service.py  base.py  simulator_service.py
dashboard/ui/: __init__.py  alerts_tab.py  analytics_tab.py  api_tab.py  data_tab.py  simulator_tab.py
dashboard/ui/utils/: __init__.py  components.py  styles.py
tests/: conftest.py  test_config.py  test_http_client.py  test_mock.py  test_mongo_alerts.py  test_mongo_analytics.py  test_services.py
